use crate::core::game::room::Room;

pub struct Station {
    id: u32,
    type_: u8,
    room: Room,
}
